<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/groupBase">
        <item
            android:id="@+id/home_button"
            android:title="@string/home_button"
            android:icon="@drawable/home_ic"/>
        <item
            android:id="@+id/settings_button"
            android:title="@string/setting"
            android:visible="false"
            android:icon="@drawable/settings_ic"/>
    </group>
    <group android:id="@+id/groupAbout">
        <item
            android:id="@+id/dev_button"
            android:title="@string/dev_info"
            android:visible="false"
            android:icon="@drawable/code_ic"/>
        <item
            android:id="@+id/info_button"
            android:title="@string/info"
            android:visible="false"
            android:icon="@drawable/info_ic"/>
    </group>
    <group android:id="@+id/groupExtra">
        <item
            android:id="@+id/where_file"
            android:title="@string/where_file"
            android:icon="@drawable/code_ic"/>
    </group>
</menu>