<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_dark"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_bg" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="128dp"
        android:layout_height="80dp"
        android:layout_marginTop="48dp"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/xs_soft2" />

    <EditText
        android:id="@+id/token"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/login_corner"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/server_access_token"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="18sp"
        app:flow_horizontalAlign="start"
        app:flow_verticalAlign="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/key" />

    <EditText
        android:id="@+id/server"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/login_corner"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/server_address"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="18sp"
        app:flow_horizontalAlign="start"
        app:flow_verticalAlign="center"
        app:layout_constraintEnd_toEndOf="@+id/token"
        app:layout_constraintStart_toStartOf="@+id/token"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/key"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/login_corner"
        android:ems="10"
        android:hint="@string/server_access_key"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="18sp"
        app:flow_horizontalAlign="start"
        app:flow_verticalAlign="center"
        app:layout_constraintEnd_toEndOf="@+id/token"
        app:layout_constraintStart_toStartOf="@+id/server"
        app:layout_constraintTop_toBottomOf="@+id/server" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"

        android:clickable="true"
        android:contentDescription="@string/login"
        android:cropToPadding="false"
        android:onClick="login"
        android:src="@drawable/url"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:maxImageSize="32dp"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:shadowColor="#0C0C0C"
        android:text="@string/xssoft"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />


</androidx.constraintlayout.widget.ConstraintLayout>