<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/mainContainer">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="start"
            android:id="@+id/topBarLayout"
            android:background="@color/blue">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="?android:attr/actionBarSize">
                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/topMenuButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5sp"
                    android:adjustViewBounds="true"
                    android:background="?android:selectableItemBackgroundBorderless"
                    android:contentDescription="@string/tool_box"
                    android:minWidth="48sp"
                    android:scaleType="centerInside"
                    android:src="@drawable/menu_ic"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/topMenuButton"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:text="@string/home">
                </TextView>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="4sp"
                android:background="@drawable/top_bar_dropshadow"/>
        </LinearLayout>

        <FrameLayout
            android:id="@+id/FragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="58sp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/BottomAppBar"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_gravity="bottom"
            app:backgroundTint="#FFFFFF"
            app:contentInsetStart="0sp"
            app:fabCradleMargin="6sp">

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottomNavView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/empty_background"
                app:itemIconSize="26sp"
                app:labelVisibilityMode="unlabeled"
                app:menu="@menu/main_bottom_bar" />
        </com.google.android.material.bottomappbar.BottomAppBar>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/homeFloatingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary_blue"

            android:contentDescription="@string/home_button"
            android:src="@drawable/home_ic"
            app:tint="@null"
            android:tooltipText="@string/home_button"
            app:elevation="5dp"
            app:borderWidth="0sp"
            app:fabCustomSize="60sp"
            app:fabSize="auto"

            app:layout_anchor="@id/BottomAppBar"
            app:maxImageSize="38sp" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/navigation_menu"/>
</androidx.drawerlayout.widget.DrawerLayout>